--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+
+
+
 body {
     background-color: rgb(5, 236, 206);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
-    text-align: center;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 16px;
 }
+
 
 h1, h2, h3, h4, h5, h6 {
     color: rgb(255, 0, 140);
@@ -12,4 +16,51 @@ h1, h2, h3, h4, h5, h6 {
 a {
 
     color: rgb(255, 0, 140);
+    text-decoration: none;
 }
+
+ul{
+    list-style-type: none;
+}
+
+/*.container{
+    margin: 10px;
+    
+       
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 270px;
+    max-width: 1045px;
+    gap: 20px;
+}
+
+
+
+.name{
+    color: white;
+    font-size: 70px;
+    font-weight: bold;
+}
+.slogan{
+    width: 200px;
+    height: 200px;
+    
+    
+}
+
+
+
+
+
+.menu{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 10px;
+
+}
+
