--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background-color: rgb(5, 236, 206);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: 17px;
 }
 
 
@@ -25,14 +25,15 @@ body {
     justify-content: center;
     gap: 10px;
     max-width: 1060px;
-    margin: 0 auto 10px;
-    
+    margin: 0 auto 10px; 
 }
+
 
 .logo{
     height: 200px;
     width: 200px;
 }
+
 
 .name{
     display: flex;
@@ -41,9 +42,8 @@ body {
     color: white;
     font-size: 76px;
     width: 200px;
-   
-
 }
+
 
 .slogan{
     display: flex;
@@ -52,12 +52,11 @@ body {
     width: 620px;
     font-size: 17px;
     line-height: 1;
-    
 }
+
 
 .slogan1, .slogan2{
     color: rgb(255, 0, 140);  
-
 }
 
 
@@ -65,17 +64,9 @@ body {
     font-size: 42px; 
 }
 
+
 .slogan2{
-    font-size: 26px; 
-    
-}
-
-
-a {
-
-    color: rgb(255, 0, 140);
-    text-decoration: none;
-    
+    font-size: 26px;   
 }
 
 
@@ -85,10 +76,53 @@ a {
     justify-content: center;
     gap: 10px;
     max-width: 1060px;
-    margin: 0 auto;
-    
-    
-    
+    margin: 0 auto;   
+}
+
+
+a {
+    color: rgb(255, 0, 140);
+    text-decoration: none;   
+    font-size: 16px;
+}
+
+
+.recipe-container{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    max-width: 560px;
+    margin: 20px auto;
+    padding: 10px;
+    line-height: 1.4;
+    text-align: center;   
+    border: 2px dotted white;
+}
+
+
+.top-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 4px;
+}
+
+
+.top-img{
+    height: 75px;
+    width: 75px;
+}
+
+
+.top-name{
+    font-size: 28.5px;
+    display: flex;
+    align-items: center;
+    color: white;
+    width: 75px;
+    height: 75px;
+    line-height: 1.2;
 }
 
 
@@ -97,6 +131,19 @@ ul{
 }
 
 
+ol{
+    list-style-position: inside;
+}
+
+
+h2, h3{
+    color: rgb(255, 0, 140);
+}
+
+
+h2{
+    margin: 10px;
+}
 
 
 
