--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 .logo{
     height: 200px;
     width: 200px;
+    border-radius: 5px;
 }
 
 
@@ -79,6 +80,9 @@ body {
     margin: 0 auto;   
 }
 
+img{
+    border-radius: 5px;
+}
 
 a {
     color: rgb(255, 0, 140);
@@ -98,6 +102,7 @@ a {
     line-height: 1.4;
     text-align: center;   
     border: 2px dotted white;
+    border-radius: 5px;
 }
 
 
@@ -112,7 +117,9 @@ a {
 .top-img{
     height: 75px;
     width: 75px;
+    border-radius: 5px;
 }
+
 
 
 .top-name{
